--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>b2s</groupId>
     <artifactId>recent-file-list</artifactId>
     <packaging>nbm</packaging>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Recent File List</name>
 
     <description>
