updated to show the project name beside files that are listed mulitiple times in the list

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
             <artifactId>org-openide-filesystems</artifactId>
             <version>${platform.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-projectuiapi</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-projectapi</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
     </dependencies>
 
      <build>
