added the organization name so the author's name will be populated. this is a new requirement by the netbeans plugin portal

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
     <packaging>nbm</packaging>
     <version>0.4-SNAPSHOT</version>
     <name>Recent File List</name>
+    
+    <organization>
+        <name>Dan Dudley</name>
+    </organization>
 
     <description>
         Keeps track of the files you have visited and makes it simple to switch back to a past file
