--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>b2s</groupId>
     <artifactId>recent-file-list</artifactId>
     <packaging>nbm</packaging>
-    <version>0.8</version>
+    <version>0.9-SNAPSHOT</version>
     <name>Recent File List</name>
     
     <organization>
