--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>b2s</groupId>
         <artifactId>netbean-plugin-parent</artifactId>
-        <version>0.5</version>
+        <version>0.7</version>
     </parent>
 
     <groupId>b2s</groupId>
@@ -112,7 +112,10 @@
     </dependencies>
 
     <scm>
-         <developerConnection>scm:git:git://github.com/born2snipe/recent-files-nbm.git</developerConnection>
+        <connection>scm:git:git@github.com:born2snipe/recent-files-nbm.git</connection>
+        <url>git@github.com:born2snipe/recent-files-nbm.git</url>
+        <developerConnection>scm:git:git@github.com:born2snipe/recent-files-nbm.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
